<resources>
    <string name="app_name">AndroidAssignments</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\’m a button</string>
    <string name="LoginButtonText">Login</string>
    <string name="login_name_label">Login</string>
    <string name="login_input_hint">login name</string>
    <string name="password_label">password</string>
    <string name="radio_button_label">RadioButton</string>
    <string name="check_box_label">CheckBox</string>
    <string name="switch_label">What does this do?</string>
    <string name="dialog_message">Do you want to finish the activity?</string>
    <string name="dialog_title">Finish Activity</string>
    <string name="ok">Yes</string>
    <string name="cancel">No</string>
</resources>




