<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="2dp"
    android:columnCount="2"
    android:rowCount="2">

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="199dp"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:text="@string/radio_button_label" />

    <CheckBox
        android:id="@+id/checkBox5"
        android:layout_width="209dp"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"
        android:text="@string/check_box_label" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="199dp"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/switch_label" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        app:srcCompat="@android:drawable/ic_menu_camera" />
</GridLayout>